# right-side-cluster-esp32s3

./: .gitattributes  .gitignore  CMakeLists.txt  FLASH_READINESS.md  README.md  RUN_2_TRACKER.md  SETUP_BEFORE_YOU_BUILD.txt  WSL_LOCATION_FOR_AGENTS.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: run2-tracker-scan.yml
cmake/: esp_lvgl_port_iram_patch.cmake
main/: CMakeLists.txt  Kconfig.projbuild  alarm_task.c  bench_demo.c  bench_demo.h  bsp.c  bsp.h  dash_bridge.c  dash_data.c  dash_data.h  dash_sync.h  idf_component.yml  main.c  menu_strings.h  right-colors.h  right-dash_data.h  run2_config.h  uart_rx.c
main/ui/: ui.c  ui.h  ui_bar_gauges.c  ui_bar_gauges.h  ui_boot.c  ui_boot.h  ui_debug_log.h  ui_lambda.c  ui_lambda.h  ui_menu_popup.c  ui_menu_popup.h  ui_no_data.c  ui_no_data.h  ui_numeric.c  ui_numeric.h  ui_signal_filter.c  ui_signal_filter.h  ui_warning.c  ui_warning.h  ui_warning_overlay.c  ui_warning_overlay.h
main/ui/assets/: lambda_64.c  toyota_logo.c
main/ui/fonts/: aerospace_22.c  aerospace_56.c  convert.sh  fonts_stub.c  lambda_56.c  racehead_12.c  racehead_14.c  racehead_17.c  racehead_19.c  racehead_22.c  racehead_28.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h
scripts/: flash_cluster.ps1  idf_env_workspace.ps1  patch_esp_lvgl_port_iram.ps1  png_to_lvgl_c.py  prepare_flash.ps1  verify_font_sizes.ps1
